--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ p{
 @keyframes words {
   0%,
   20% {
-    content: "web developer";
+    content: "Web developer";
   }
   21%,
   40% {
@@ -228,7 +228,7 @@ p{
   }
   41%,
   60% {
-    content: "web developer";
+    content: "Web developer";
   }
   61%,
   80% {
@@ -658,4 +658,5 @@ section .button #cv-cht-btn{
     color: #b74b4b;
   }
 }
+
 
